# rawr

./: .ghci  .stylish-haskell.yaml  .travis.yml  HLint.hs  LICENSE  README.md  rawr.cabal  stack.yaml
benchmark/: criterion.hs
lib/Data/: BitMap.hs  Rawr.hs  Roaring.hs
lib/Data/BitMap/: Roaring.hs
lib/Data/BitMap/Roaring/: Chunk.hs  Utility.hs
lib/Data/BitMap/Roaring/Chunk/: High.hs  Low.hs
lib/Data/Rawr/: Bits.hs  Block.hs  Dense.hs  Sparse.hs
lib/Data/Roaring/: Chunk.hs  Utility.hs
lol/lib/Data/: Roaring.hs
lol/test/: Properties.hs
rawr/: HLint.hs  README.md  rawr.cabal
rawr-format/: LICENSE  README.md  rawr-format.cabal
rawr/lib/Data/BitMap/: Roaring.hs
rawr/lib/Data/BitMap/Roaring/: Chunk.hs  Utility.hs
rawr/lib/Data/BitMap/Roaring/Chunk/: Low.hs
src/: Main.hs
test/: Generators.hs  Old.hs  Spec.hs  properties.hs
