name:                rawr
version:             0.1.0.0
synopsis:            Roaring Bitmaps compressed bitmap data-structure.
description:         Roaring Bitmaps compressed bitmap data-structure.
homepage:            https://github.com/thsutton/rawr/
license:             BSD3
license-file:        LICENSE
author:              Thomas Sutton
maintainer:          me@thomas-sutton.id.au
-- copyright:           
category:            Data
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

source-repository      HEAD
  type:                git
  location:            https://github.com/thsutton/rawr.git

library
  default-language:    Haskell2010
  hs-source-dirs:      lib
  exposed-modules:
    Data.BitMap.Roaring
  build-depends:
      base >=4.7 && <4.8
    , convertible
    , vector

test-suite             properties
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      test
  main-is:             properties.hs
  build-depends:
      base
    , QuickCheck
    , containers
    , rawr
