name:                rawr
version:             0.1.0.0
synopsis:            Implementation of Roaring Bitmaps.
description:         Please see README.md
homepage:            http://github.com/thsutton/rawr
license:             BSD3
license-file:        LICENSE
author:              Thomas Sutton
maintainer:          me@thomas-sutton.id.au
category:            Data
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/thsutton/rawr

library
  default-language:    Haskell2010
  hs-source-dirs:      lib
  exposed-modules:
      Data.BitMap
  build-depends:
      base >= 4.7 && < 5
    , vector

test-suite properties
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             properties.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base
    , rawr
    , QuickCheck
    , containers

