name:                rawr
version:             0.1.0.0
synopsis:            An implementation of the roaring bitmaps data structure.
description:
  .
  This is an implementation of the roaring bitmaps data-structure for compressed
  bitmaps. Roaring bitmaps provide better compression and performance than other
  compressed bitmaps in many situations.
  .
homepage:            https://github.com/thsutton/rawr/#readme
license:             BSD3
license-file:        LICENSE
author:              Thomas Sutton
maintainer:          me@thomas-sutton.id.au
copyright:           (c) 2018 Thomas Sutton
category:            Data
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:
  README.md
  stack.yaml

source-repository      HEAD
  type:                git
  location:            https://github.com/thsutton/rawr.git

library
  default-language:    Haskell2010
  hs-source-dirs:      lib
  exposed-modules:
    Data.Rawr
  other-modules:
    Data.Rawr.Bits
    Data.Rawr.Block
    Data.Rawr.Dense
    Data.Rawr.Sparse
  build-depends:
      base >= 4.7 && < 5
    , vector
    , vector-algorithms

test-suite             properties
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      test
  main-is:             properties.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base
    , QuickCheck
    , containers
    , quickcheck-instances
    , rawr
