name:                rawr-format
version:             0.1.0.0
synopsis:            Interoperable Roaring Bitmaps serialisation for rawr
description:         Please see README.md
homepage:            https://github.com/thsutton/rawr#readme
license:             BSD3
license-file:        LICENSE
author:              Thomas Sutton
maintainer:          me@thomas-sutton.id.au
copyright:           Copyright: (c) 2016 Thomas Sutton
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/thsutton/rawr

library
  default-language:    Haskell2010
  hs-source-dirs:      lib
  exposed-modules:     Lib
  build-depends:       base >= 4.5 && < 5
                     , rawr

test-suite doctests
  default-language:    Haskell2010
  hs-source-dirs:      test
  type:                exitcode-stdio-1.0
  ghc-options:         -threaded
  main-is:             doctests.hs
  build-depends:       base
                     , QuickCheck
                     , doctest >= 0.9

test-suite             zzz-check-hlint
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             check-hlint.hs
  build-depends:       base
                     , hlint

test-suite rawr-format-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , rawr-format
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

