name:                rawr
version:             0.1.0.0
synopsis:            Roaring Bitmaps compressed bitmap data-structure.
description:         Roaring Bitmaps compressed bitmap data-structure.
homepage:            https://github.com/thsutton/rawr#readme
license:             BSD3
license-file:        LICENSE
author:              Thomas Sutton
maintainer:          me@thomas-sutton.id.au
copyright:           (c) 2015 Thomas Sutton
category:            Data
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

source-repository      HEAD
  type:                git
  location:            https://github.com/thsutton/rawr/

library
  default-language:    Haskell2010
  hs-source-dirs:      lib
  exposed-modules:     Data.BitMap.Roaring
                       Data.BitMap.Roaring.Chunk
                       Data.BitMap.Roaring.Chunk.High
                       Data.BitMap.Roaring.Chunk.Low
                       Data.BitMap.Roaring.Utility
  build-depends:       base >=4.5 && <4.10
                     , containers
                     , convertible
                     , transformers
                     , vector
                     , vector-algorithms

test-suite             properties
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      test
  main-is:             properties.hs
  build-depends:       base
                     , QuickCheck
                     , containers
                     , rawr

test-suite doctests
  default-language:    Haskell2010
  hs-source-dirs:      test
  type:                exitcode-stdio-1.0
  ghc-options:         -threaded
  main-is:             doctests.hs
  build-depends:       base
                     , QuickCheck
                     , doctest >= 0.9

test-suite             zzz-check-hlint
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             check-hlint.hs
  build-depends:       base
                     , hlint
